--- a/docs/components/myscript-common-element/myscript-languages-element.html
+++ b/docs/components/myscript-common-element/myscript-languages-element.html
@@ -46,18 +46,13 @@ LICENSE: [Apache License 2.0](http://www.apache.org/licenses/LICENSE-2.0)
 
         /**
          * Attach the element to the dom. This is the most critical part of the component.
-         * @param languagesElementParam
+         * @param languagesElement
          */
-        function languagesAttachedElementToDom(languagesElementParam) {
-            const languagesElement = languagesElementParam;
+        function languagesAttachedElementToDom(languagesElement) {
             languagesElement.configuration = languagesBuildConfigurationFromElementAttributes(languagesElement);
 
             MyScript.getAvailableLanguageList(languagesElement.configuration, languagesElement.sortByValue).then(function (res) {
-                var langList = [];
-                for (var i in res.result) {
-                    langList.push({ 'value': i, 'description': res.result[i] });
-                }
-                languagesElement.languages = langList;
+              languagesElement.languages = res.result;
                 languagesElement.dispatchEvent(new CustomEvent('myscript-languages-element-result', { detail: languagesElement.languages }));
             });
 
@@ -124,7 +119,7 @@ LICENSE: [Apache License 2.0](http://www.apache.org/licenses/LICENSE-2.0)
                          * Languages List
                          */
                         languages: {
-                            type: Array,
+                            type: Object,
                             notify: true
                         },
                         /**
