[DOC] documentation update

--- a/docs/components/myscript/samples/dev/websocket_math_iink.html
+++ b/docs/components/myscript/samples/dev/websocket_math_iink.html
@@ -7,14 +7,6 @@
 
   <title>WEBSOCKET Math iink</title>
 
-  <link rel="prefetch" href="../../dist/fonts/stix/STIXGeneral-Bold.otf">
-  <link rel="prefetch" href="../../dist/fonts/stix/STIXGeneral-BoldItalic.otf">
-  <link rel="prefetch" href="../../dist/fonts/stix/STIXGeneral-Italic.otf">
-  <link rel="prefetch" href="../../dist/fonts/stix/STIXGeneral-Regular.otf">
-  <link rel="prefetch" href="../../dist/fonts/stix/STIXSizeThreeSym-Bold.otf">
-  <link rel="prefetch" href="../../dist/fonts/stix/STIXSizeThreeSym-Regular.otf">
-  <link rel="prefetch" href="../../dist/fonts/diagram/segoeui.otf">
-
   <link rel="stylesheet" href="../../dist/myscript.min.css"/>
   <link rel="stylesheet" href="../samples.css">
 
@@ -85,11 +77,12 @@
   });
   closeElement.addEventListener('pointerdown', function () {
     var editor = editorElement['data-myscript-editor'];
-    editor.recognizer.close(editor.configuration, editor.model, editor.recognizerContext, function (err, res) {
-      console.log('Closed', res);
-      editor.recognizerContext.websocket.autoReconnect = true;
-    });
+    editor.recognizer.close(editor.configuration, editor.model, editor.recognizerContext, function (err, res) {});
   });
+
+  Object.keys(MyScript.Constants.Logger)
+    .filter(key => ['MODEL', 'RECOGNIZER'].includes(key))
+    .forEach(key => MyScript.LoggerConfig.getLogger(MyScript.Constants.Logger[key]).setLevel('DEBUG', false));
 
   /**
    * Attach an editor to the document
@@ -113,6 +106,9 @@
         }
       },
       v4: {
+        math: {
+          mimeTypes: ['application/x-latex']
+        },
         renderer: {
           debug: {
             'draw-text-boxes': true
