--- a/docs/components/myscript-common-element/demo/iink_preview.html
+++ b/docs/components/myscript-common-element/demo/iink_preview.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 <head>
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
@@ -17,7 +18,7 @@
         type="MATH"
         protocol="WEBSOCKET"
         apiversion="V4"
-        host="iinkpreview.myscript.com"
+        host="newcloud.myscript.com"
         applicationkey="7d223f9e-a3cb-4213-ba4b-85e930605f8b"
         hmackey="5ab1935e-529a-4d48-a695-158450e52b13"
         strokecolor="#000000"
