[DOC] Add demo samples

--- a/docs/components/myscript-common-element/myscript-languages-element.html
+++ b/docs/components/myscript-common-element/myscript-languages-element.html
@@ -8,7 +8,8 @@
         hmackey="YOUR MYSCRIPT CDK HMAC KEY">
     </myscript-languages-element>
 
-@demo
+@demo demo/languages.html
+@demo demo/languages-selector-init.html
 -->
 <dom-module id="myscript-languages-element">
     <script>
