[FIX] fixes regression on languages

--- a/docs/components/myscript-common-element/myscript-languages-element.html
+++ b/docs/components/myscript-common-element/myscript-languages-element.html
@@ -13,7 +13,7 @@
 -->
 <dom-module id="myscript-languages-element">
     <script>
-        class MyScriptLanguagesElement extends Polymer.mixinBehaviors(Polymer.Element) {
+        class MyScriptLanguagesElement extends Polymer.Element {
 
             static get is() {
                 return 'myscript-languages-element'
