[DEV] Split v3 and v4 samples

--- a/docs/components/myscript-common-element/myscript-common-element.html
+++ b/docs/components/myscript-common-element/myscript-common-element.html
@@ -29,13 +29,13 @@ Custom property | Description | Default
 `--myscript-common-element-button-focus-background` | Buttons focus background | #1A9FFF
 `--myscript-common-element-button-disabled-background` | Buttons disabled background | #F5F6F7
 
-@demo demo/customstyle.html Customize your component
-@demo demo/debug.html Debug your component
-@demo demo/iink_preview.html IInk preview
-@demo demo/index.html Get started
-@demo demo/init-error.html Display initialization error
-@demo demo/programmatic-init.html Programmatic initialization
-@demo demo/stats.html Get statistics
+@demo demo/v3/customstyle.html Customize your component
+@demo demo/v3/debug.html Debug your component
+@demo demo/v3/index.html Get started
+@demo demo/v3/init-error.html Display initialization error
+@demo demo/v3/programmatic-init.html Programmatic initialization
+@demo demo/v3/stats.html Get statistics
+@demo demo/v4/iink_preview.html IInk preview
 -->
 <dom-module id="myscript-common-element">
     <template>
