--- a/docs/components/myscript-common-element/myscript-languages-element.html
+++ b/docs/components/myscript-common-element/myscript-languages-element.html
@@ -8,8 +8,8 @@
         hmackey="YOUR MYSCRIPT CDK HMAC KEY">
     </myscript-languages-element>
 
-@demo demo/languages.html Get started
-@demo demo/languages-selector-init.html Programmatic initialization
+@demo demo/v3/languages.html Get started
+@demo demo/v3/languages-selector-init.html Programmatic initialization
 -->
 <dom-module id="myscript-languages-element">
     <script>
