--- a/docs/components/myscript-common-element/myscript-common-element.html
+++ b/docs/components/myscript-common-element/myscript-common-element.html
@@ -29,20 +29,21 @@ Custom property | Description | Default
 `--myscript-common-element-button-focus-background` | Buttons focus background | #1A9FFF
 `--myscript-common-element-button-disabled-background` | Buttons disabled background | #F5F6F7
 
-@demo demo/v3/customstyle.html Customize your component
-@demo demo/v3/debug.html Debug your component
-@demo demo/v3/index.html Get started
-@demo demo/v3/init-error.html Display initialization error
-@demo demo/v3/programmatic-init.html Programmatic initialization
-@demo demo/v3/stats.html Get statistics
-@demo demo/v4/iink_preview.html IInk preview
+@demo get_started.html Get started with SHAPE
+@demo v4_configuration.html Use interactive ink api for MATH (v4)
+@demo handle_exports.html Handle exports
+@demo handle_error.html Handle error
+@demo styling.html Customize your component style
+@demo programmatic_init.html Programmatic initialization
+@demo get_stats.html Get statistics
+@demo debug.html Debug your component
 -->
 <dom-module id="myscript-common-element">
     <template>
         <style>
             :host {
                 --myscript-common-element-background: none;
-                --myscript-common-element-color: #FFFFFF;
+                --myscript-common-element-color: #1A9FFF;
                 --myscript-common-element-line-pattern: url(data:image/svg+xml;charset=utf8;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSIxOCIgaGVpZ2h0PSIxOCIgdmlld0JveD0iMCAwIDE4IDE4Ij4KICA8cGF0aCBzdHJva2U9IiNGNUY2RjciIGQ9Ik0wLjUsMCBMMC41LDE4IE0wLDAuNSBMMTgsMC41Ii8+Cjwvc3ZnPgo=);
                 --myscript-common-element-loader-background: #1A9FFF;
                 --myscript-common-element-loader-color: #F5F6F7;
@@ -318,7 +319,7 @@ Custom property | Description | Default
                     },
                     /**
                      * Properties to set when you wish to set attributes in javascript. unloaded attributes should be removed once all properties are set.
-                     * (see demo/programmatic-init.html for a better understanding)
+                     * (see demo/programmatic_init.html for a better understanding)
                      */
                     unloaded: {
                         type: Boolean,
@@ -336,7 +337,7 @@ Custom property | Description | Default
                     /**
                      * Set the additional configuration used to feed MyScript ink Paper (Structure of object as defined in MyScriptjs DefaultConfiguration.js file)
                      * Configuration values are taken into account when myscript-common-element is attach to the dom and when unloaded is set to false.
-                     * Configuration values are not reflected to myscript-common-element attributes plus attributes values are always taken into account before configuration values (see demo/programmatic-init.html for a better understanding).
+                     * Configuration values are not reflected to myscript-common-element attributes plus attributes values are always taken into account before configuration values (see demo/programmatic_init.html for a better understanding).
                      */
                     configuration: {
                         type: Object,
