--- a/docs/components/myscript-common-element/myscript-languages-element.html
+++ b/docs/components/myscript-common-element/myscript-languages-element.html
@@ -8,8 +8,8 @@
         hmackey="YOUR MYSCRIPT CDK HMAC KEY">
     </myscript-languages-element>
 
-@demo demo/v3/languages.html Get started
-@demo demo/v3/languages-selector-init.html Programmatic initialization
+@demo get_languages.html Get languages
+@demo get_languages_programmatic.html Get languages programmatically
 -->
 <dom-module id="myscript-languages-element">
     <script>
@@ -72,7 +72,7 @@
                     },
                     /**
                      * Properties to set when you wish to set attributes in javascript. unloaded attributes should be removed once all properties are set.
-                     * (see demo/languages-selector-init.html for a better understanding)
+                     * (see demo/get_languages_programmatic.html for a better understanding)
                      */
                     unloaded: {
                         type: Boolean,
@@ -84,7 +84,7 @@
                     /**
                      * Set the additional configuration used to feed MyScript ink Paper (Structure of object as defined in MyScriptjs MyScriptJSOptions.js file)
                      * Configuration values are taken into account when myscript-common-element is attach to the dom and when unloaded is set to false.
-                     * Configuration values are not reflected to myscript-languages-element attributes plus attributes values are always taken into account before configuration values (see demo/programmatic-init.html for a better understanding).
+                     * Configuration values are not reflected to myscript-languages-element attributes plus attributes values are always taken into account before configuration values (see demo/programmatic_init.html for a better understanding).
                      */
                     configuration: {
                         type: Object,
